Adds current location, moves places into separate file

--- a/index.html
+++ b/index.html
@@ -25,340 +25,26 @@ var map = new mapboxgl.Map({
     zoom: 13 // starting zoom
 });
 
+//from https://codepen.io/KryptoniteDove/post/load-json-file-locally-using-pure-javascript
+function loadJSON(callback) {
+   var xobj = new XMLHttpRequest();
+       xobj.overrideMimeType("application/json");
+   xobj.open('GET', 'places.json', true)
+   xobj.onreadystatechange = function () {
+         if (xobj.readyState == 4 && xobj.status == "200") {
+           // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+           callback(xobj.responseText);
+         }
+   };
+   xobj.send(null);
+};
+
 map.on('load', function () {
-    map.addSource("points", {
-        "type": "geojson",
-        "data": {
-            "type": "FeatureCollection",
-            "features": [{
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.633973, 41.919267]
-                },
-                "properties": {
-                    "title": "Cafe Brauer",
-                    "description": "Where we’ll be getting married 👫. \
-                      <a target='_blank' href='https://goo.gl/maps/QSsJz3aHVAL2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "toilet",
-                    "color": 1
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.6278231, 41.8935352]
-                },
-                "properties": {
-                    "title": "AC Hotel",
-                    "description": "Where many of the guests will be staying. \
-                      <a target='_blank' href='https://goo.gl/maps/BT9iTpuzLQL2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "embassy",
-                    "color": 1
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.627920, 41.892776]
-                },
-                "properties": {
-                    "title": "Watershed",
-                    "description": "A speakeasy with some delicious whiskey cocktails. \
-                      <a target='_blank' href='https://goo.gl/maps/MUPF3TJtQAM2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "bar",
-                    "color": 1
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.615008, 41.892708]
-                },
-                "properties": {
-                    "title": "Lakeshore Path Entrance",
-                    "description": "Great for running or just checking out the lake. \
-                      <a target='_blank' href='https://goo.gl/maps/kTZEuJhM3P22' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "swimming",
-                    "color": 1
-                }
-            },{
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.621796, 41.897192]
-                },
-                "properties": {
-                    "title": "MCA",
-                    "description": " The Museum of Contemporary Art is not as well known as the Art Institute of Chicago, but nevertheless offers an artsy escape from the bustle of the city. \
-                      <a target='_blank' href='https://goo.gl/maps/3BHzLoqMr9k' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "museum",
-                    "color": 1
-                }
-            },{
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.624985, 41.881655]
-                },
-                "properties": {
-                    "title": "Cindy's Rooftop Bar",
-                    "icon": "bar",
-                    "description": " A rooftop bar at the top of the Chicago Athletic Association — delicious drinks and gorgeous views of Millennium Park. \
-                      <a target='_blank' href='https://goo.gl/maps/bPGhanUDxgF2' data-toggle='modal'>View in Google Maps</a>",
-                    "color": 1
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.638183, 41.893818]
-                },
-                "properties": {
-                    "title": "Asado Coffee",
-                    "description": "If you like like coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area). \
-                      <a target='_blank' href='https://goo.gl/maps/XKhW9ESHiQy' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "cafe",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.630881, 41.890717]
-                },
-                "properties": {
-                    "title": "XOCO",
-                    "description": "A relatively inexpensive lunch spot with great tortas and other Mexican-influenced fare. \
-                      <a target='_blank' href='https://goo.gl/maps/SjuQH6c1nzj' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.626474, 41.893141]
-                },
-                "properties": {
-                    "title": "Pizzeria Due",
-                    "description": "Both Pizzeria Due (and the original Pizzeria Uno) are sooooo much better than their airport/chain counterparts.  Due's tends to have less of a line, but both are delicious examples of a Chicago-style slice🍕. \
-                      <a target='_blank' href='https://goo.gl/maps/K66anfeQBRJ2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.629927, 41.884737]
-                },
-                "properties": {
-                    "title": "Do-Rite Donuts",
-                    "description": "People say the Donut Vault is the best donut in Chicago, but dollars for donuts, Do-Rite takes the cake 🍩 \
-                      <a target='_blank' href='https://goo.gl/maps/wefYvcPfKwz' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "ice-cream",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.627782, 41.887062]
-                },
-                "properties": {
-                    "title": "Chicago Riverwalk",
-                    "description": "The river itself may leave a bit to be desired, but the Chicago Riverwalk offers a different perspective on the skyline and the city. A nice respite in the middle of the city. \
-                      <a target='_blank' href='https://goo.gl/maps/dRguWZ1FVEm' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "entrance",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.634607, 41.915268]
-                },
-                "properties": {
-                    "title": "J. Parker",
-                    "description": "Like Cindy's, a rooftop bar with a view.  Overlook Lincoln Park and check out the skyline from the north-side.\
-                      <a target='_blank' href='https://goo.gl/maps/oUTneFtCpTQ2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "bar",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [ -87.683364, 41.914228,]
-                },
-                "properties": {
-                    "title": "The 606",
-                    "description": "Here's the eastern entrance to the 606.  Like the High Line in New York City, a raised trail that cuts through some of the city's north-side neighborhoods.\
-                      <a target='_blank' href='https://goo.gl/maps/MiXXc6D4Gtm' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "entrance",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [ -87.683364, 41.914228]
-                },
-                "properties": {
-                    "title": "Billy Sunday",
-                    "description": "Great cocktail bar the sits in Logan Square proper.\
-                      <a target='_blank' href='https://goo.gl/maps/A1SdMNyFEom' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "bar",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.697099, 41.919192]
-                },
-                "properties": {
-                    "title": "Bang Bang Pie",
-                    "description": "All of their pie is good, but their seasonal fruit pies tend to be the best.\
-                      <a target='_blank' href='https://goo.gl/maps/hXdtDK4eCct' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "ice-cream",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.697780, 41.923342]
-                },
-                "properties": {
-                    "title": "Cafe Mustache",
-                    "description": "Full disclosure: the staff here does not care about you.  But what Cafe Mustache lacks in hospitality they make up with good coffee and food. The avocado wrap as a salad is a favorite.\
-                      <a target='_blank' href='https://goo.gl/maps/S6Jh9wPavFt' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "cafe",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.691684, 41.919626]
-                },
-                "properties": {
-                    "title": "Wasabi",
-                    "description": "Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried).\
-                      <a target='_blank' href='https://goo.gl/maps/a3m3QkGbZQG2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.648030, 41.911739]
-                },
-                "properties": {
-                    "title": "Dawali",
-                    "description": "Dawali has delicious mediterranean dishes — and is super affordable. \
-                      <a target='_blank' href='https://goo.gl/maps/BZGc2paeUH82' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.623735, 41.879616]
-                },
-                "properties": {
-                    "title": "The Art Institue of Chicago",
-                    "description": "This is on the every list of things to do in Chicago for a good reason — it is a feast for the eyes.  Be sure to check out the modern wing. \
-                      <a target='_blank' href='https://goo.gl/maps/9p9huHPiQiS2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "museum",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.623347, 41.882538]
-                },
-                "properties": {
-                    "title": "The Bean",
-                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
-                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "circle-stroked",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.706773, 41.927716]
-                },
-                "properties": {
-                    "title": "Lula Cafe",
-                    "description": "If we could only tell people to go to one restaurant in Chicago and guarantee that they had a good meal, we'd tell them to go to Lula's. Consistently a great meal at a fair price. \
-                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.711531, 41.931254]
-                },
-                "properties": {
-                    "title": "Hopewell Brewing Company",
-                    "description": "Opening in 2016, Hopewell Brewing Company makes a great addition to the Chicago craft beer scene alongside Lumarie favorites Revolution Brewing and DryHop Brewers. Clean and modern on the inside — always a good time.\
-                      <a target='_blank' href='https://goo.gl/maps/y91ZE9DxrEN2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "beer",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.701331, 41.917645]
-                },
-                "properties": {
-                    "title": "Parson's Chicken and Fish",
-                    "description": "A hipster spot if there ever was one.  Parson's is known for its amazing patio and it's craft cocktail slushies (the Frozen Negroni is so much better than your expectations).\
-                      <a target='_blank' href='https://goo.gl/maps/4hGFi61rGhS2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "beer",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.636540, 41.916870]
-                },
-                "properties": {
-                    "title": "Bricks Pizza",
-                    "description": "If you haven't heard, Chicago isn't known for thin-crust pizza.  That doesn't mean there aren't amazing thin-crust options like Bricks. Satiate your thin-crust cravings here! \
-                      <a target='_blank' href='https://goo.gl/maps/a83Bt6MS1hx' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            }, {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.627532,41.892294]
-                },
-                "properties": {
-                    "title": "The Berkshire Room",
-                    "description": "A fancy bar with knock-out cocktails that's quiet enough for conversation. Go with one of their barrel infused cocktails (or if you want something more bespoke, check out dealer's choice.)  \
-                      <a target='_blank' href='https://goo.gl/maps/Erug4uKKtvj' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            },
-          ]
-        }
-    });
+  loadJSON( function(response) {
+    // Parse JSON string into object
+    var placeData = JSON.parse(response);
+
+    map.addSource("points", placeData);
 
     map.addLayer({
         "id": "points",
@@ -381,6 +67,7 @@ map.on('load', function () {
           }
         }
     });
+  });
 });
 
 // When a click event occurs near a place, open a popup at the location of
@@ -408,6 +95,40 @@ map.on('mousemove', function (e) {
     var features = map.queryRenderedFeatures(e.point, { layers: ['points'] });
     map.getCanvas().style.cursor = (features.length) ? 'pointer' : '';
 });
+
+var geolocater = new mapboxgl.Geolocate({position: 'bottom-left'});
+map.addControl(geolocater);
+
+geolocater.on('geolocate', function(e){
+  map.addSource("location", {
+    "type": "geojson",
+    "data": {
+        "type": "FeatureCollection",
+        "features": [{
+            "type": "Feature",
+            "geometry": {
+                "type": "Point",
+                "coordinates": [e.coords.longitude, e.coords.latitude]
+            },
+            "properties": {
+                "title": "Current Location",
+                "icon": "circle",
+                "color": 1
+            }
+        }]
+      }
+  })
+
+  map.addLayer({
+       "id": "currentLocation",
+       "source": "location",
+       "type": "circle",
+       "paint": {
+           "circle-radius": 5,
+           "circle-color": "#007cbf"
+       }
+   });
+})
 
 </script>
 
